<resources>
    <string name="app_name">AStar</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="x2">X2</string>
    <string name="y2">Y2</string>
    <string name="add_edge">Добавить грань</string>
    <string name="edge_item_coords">%1$s(x: %2$d; y: %3$d)</string>
    <string name="edge_item_distance_double">dst: %1$.2f</string>
    <string name="edge_item_distance_int">dst: %1$d</string>
    <string name="distance">Расстояние</string>
    <string name="find_shortest_way">Найти кратчайший путь</string>
    <string name="choose_points">Выбрать вершины</string>
    <string name="first_point">Первая точка</string>
    <string name="second_point">Вторая точка</string>
    <string name="shortest_way_from_X_to_X">Кратчайший путь из %s в %s</string>
    <string name="way_from_X_to_X_not_found">Путь из %s в %s не найден</string>
    <string name="enter_different_points">Введите разные вершины</string>
    <string name="enter_value">Введите значение</string>
    <string name="choose_different_points">Выберите разные вершины</string>
    <string name="already_have_this_edge">Уже есть такое ребро</string>
</resources>
