...
    <NumberPicker
        android:id="@+id/npFirstPoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/npSecondPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSecondPoint"
        android:layout_width="0dp"
...
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/npFirstPoint"
        app:layout_constraintTop_toTopOf="@+id/npFirstPoint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindShortestWay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/find_shortest_way"
        app:layout_constraintBottom_toBottomOf="parent"
...
